ingress-do-sticky.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sticky
spec:
  selector:
    matchLabels:
      app: sticky
  replicas: 5
  template:
    metadata:
      labels:
        app: sticky
        svc: example
    spec:
      containers:
        - name: main
          image: ghcr.io/cybercryptio/training-example
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              memory: 20Mi
              cpu: 20m
---
apiVersion: v1
kind: Service
metadata:
  name: sticky
spec:
  ports:
    - port: 80
  selector:
    app: sticky
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sticky
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/affinity: cookie
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - sticky.k8s.cyber-crypt.com
      secretName: sticky-tls
  rules:
    - host: sticky.k8s.cyber-crypt.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sticky
                port:
                  number: 80
